<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>org.sonatype.oss</groupId>
      <artifactId>oss-parent</artifactId>
      <version>7</version>
   </parent>
   <groupId>de.struller-baumann</groupId>
   <artifactId>visualee</artifactId>
   <version>0.27-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>

   <name>visualee</name>
   <description>A maven plugin to visualize a java ee project.</description>
   <url>http://visualee.struller-baumann.de</url>
   <organization>
      <name>Thomas Struller-Baumann</name>
      <url>http://struller-baumann.de</url>
   </organization>
   <inceptionYear>2013</inceptionYear>

   <licenses>
      <license>
         <name>The Apache Software License, Version 2.0</name>
         <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         <distribution>repo</distribution>
      </license>
   </licenses>

   <developers>
      <developer>
         <name>Thomas Struller-Baumann</name>
         <organization>struller-baumann.de</organization>
         <organizationUrl>http://www.struller-baumann.de</organizationUrl>
         <email>visualee@struller-baumann.de</email>
         <timezone>+1</timezone>
      </developer>
   </developers>

   <dependencies>
      <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-api</artifactId>
         <version>3.1.0</version>
         <type>jar</type>
      </dependency>
      <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-core</artifactId>
         <version>3.1.0</version>
      </dependency>
      <dependency>
         <groupId>org.glassfish</groupId>
         <artifactId>javax.json</artifactId>
         <version>1.0.3</version>
         <type>jar</type>
      </dependency>
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.11</version>
         <scope>test</scope>
      </dependency>

      <!-- Annotations from the Checker Framework: nullness, interning, locking, ... -->
      <dependency>
         <groupId>org.checkerframework</groupId>
         <artifactId>checker-qual</artifactId>
         <version>3.9.1-SNAPSHOT</version>
      </dependency>
      <dependency>
         <groupId>com.google.errorprone</groupId>
         <artifactId>javac</artifactId>
         <version>9+181-r4173-1</version>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
               <source>1.8</source>
               <target>1.8</target>
               <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
               <compilerArguments>
                  <Xmaxerrs>10000</Xmaxerrs>
                  <Xmaxwarns>10000</Xmaxwarns>
               </compilerArguments>
               <annotationProcessorPaths>
                  <path>
                     <groupId>org.checkerframework</groupId>
                     <artifactId>checker</artifactId>
                     <version>3.9.1-SNAPSHOT</version>
                  </path>
               </annotationProcessorPaths>
               <annotationProcessors>
                  <!-- Add all the checkers you want to enable here -->
                  <annotationProcessor>org.checkerframework.checker.determinism.DeterminismChecker</annotationProcessor>
               </annotationProcessors>
               <compilerArgs>
                  <!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
               </compilerArgs>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.2.1</version>
            <executions>
               <execution>
                  <configuration>
                     <includePom>true</includePom>
                  </configuration>
               </execution>
            </executions>
         </plugin>
         <!--create checksums -->
         <plugin>
            <artifactId>maven-install-plugin</artifactId>
            <version>2.4</version>
            <configuration>
               <createChecksum>true</createChecksum>
            </configuration>
         </plugin>
         <!--license -->
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>license-maven-plugin</artifactId>
            <version>1.5</version>
            <configuration>
               <verbose>false</verbose>
            </configuration>
            <executions>
               <execution>
                  <id>add-apache-headers</id>
                  <goals>
                     <goal>update-file-header</goal>
                  </goals>
                  <phase>process-sources</phase>
                  <configuration>
                     <licenseName>apache_v2</licenseName>
                     <excludes>
                        <exclude>**/*.js</exclude>
                        <exclude>**/*.css</exclude>
                     </excludes>
                  </configuration>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-release-plugin</artifactId>
            <version>2.4.1</version>
            <configuration>
               <tagNameFormat>v@{project.version}</tagNameFormat>
            </configuration>
         </plugin>

         <plugin>
            <!-- This plugin will set properties values using dependency information -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <executions>
               <execution>
                  <goals>
                     <goal>properties</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
      </plugins>
      <finalName>visualee</finalName>
   </build>

   <profiles>
      <profile>
         <id>release-sign-artifacts</id>
         <activation>
            <property>
               <name>performRelease</name>
               <value>true</value>
            </property>
         </activation>
         <build>
            <plugins>
               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-gpg-plugin</artifactId>
                  <version>1.4</version>
                  <executions>
                     <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                           <goal>sign</goal>
                        </goals>
                     </execution>
                  </executions>
               </plugin>
            </plugins>
         </build>
      </profile>

      <profile>
         <id>checkerframework</id>
         <activation>
            <jdk>[1.8,13)</jdk>
         </activation>
         <build>
            <plugins>
               <plugin>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <version>3.8.1</version>
                  <configuration>
                     <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
                     <compilerArguments>
                        <Xmaxerrs>10000</Xmaxerrs>
                        <Xmaxwarns>10000</Xmaxwarns>
                     </compilerArguments>
                     <annotationProcessorPaths>
                        <path>
                           <groupId>org.checkerframework</groupId>
                           <artifactId>checker</artifactId>
                           <version>3.9.1-SNAPSHOT</version>
                        </path>
                     </annotationProcessorPaths>
                     <annotationProcessors>
                        <!-- Add all the checkers you want to enable here -->
                        <annotationProcessor>org.checkerframework.checker.determinism.DeterminismChecker</annotationProcessor>
                     </annotationProcessors>
                     <compilerArgs>
                        <!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
                     </compilerArgs>
                  </configuration>
               </plugin>
            </plugins>
         </build>
         <dependencies>
            <dependency>
               <groupId>org.checkerframework</groupId>
               <artifactId>checker</artifactId>
               <version>3.9.1-SNAPSHOT</version>
            </dependency>
         </dependencies>
      </profile>

      <profile>
         <id>checkerframework-jdk8</id>
         <activation>
            <jdk>1.8</jdk>
         </activation>
         <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
         <properties>
            <javac.version>9+181-r4173-1</javac.version>
         </properties>
         <dependencies>
            <dependency>
               <groupId>com.google.errorprone</groupId>
               <artifactId>javac</artifactId>
               <version>9+181-r4173-1</version>
            </dependency>
         </dependencies>
         <build>
            <plugins>
               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <configuration>
                     <fork>true</fork>
                     <compilerArgs combine.children="append">
                        <arg>-Xbootclasspath/p:${annotatedJdk}</arg>
                        <arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</arg>
                     </compilerArgs>
                  </configuration>
               </plugin>
            </plugins>
         </build>
      </profile>

      <profile>
         <id>checkerframework-jdk11</id>
         <activation>
            <jdk>11</jdk>
         </activation>
         <build>
            <plugins>
               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <configuration>
                     <fork>true</fork>
                     <compilerArgs combine.children="append">
                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                     </compilerArgs>
                  </configuration>
               </plugin>
            </plugins>
         </build>
         <properties>
            <!-- Temporary until animal-sniffer-maven-plugin is released with https://github.com/mojohaus/animal-sniffer/pull/91.
                 Version 1.19 is broken:  https://github.com/mojohaus/animal-sniffer/issues/76. -->
            <animal.sniffer.skip>true</animal.sniffer.skip>
         </properties>
      </profile>
   </profiles>

   <scm>
      <connection>scm:git:git@github.com:Thomas-S-B/visualee.git</connection>
      <url>scm:git:git@github.com:Thomas-S-B/visualee.git</url>
      <developerConnection>scm:git:git@github.com:Thomas-S-B/visualee.git</developerConnection>
      <tag>v0.17</tag>
   </scm>

   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
      <!-- These properties will be set by the Maven Dependency plugin -->
      <errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
   </properties>

   <distributionManagement>
      <repository>
         <id>nexus-releases</id>
         <name>Nexus Release Repository</name>
         <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
      </repository>
   </distributionManagement>
</project>
